# homespace

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: commands.rs  config.rs  constants.rs  main.rs  models.rs  services.rs
src/commands/: add.rs  add_static.rs  edit.rs  init.rs  lifecycle.rs  list.rs  remove.rs  resource.rs  show.rs  status.rs  upgrade.rs
src/models/: app.rs  compose.rs  middleware.rs  status.rs
src/services/: auth.rs  database.rs  docker.rs  generator.rs  git.rs  infra_generator.rs  scanner.rs
